--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,12 @@
 title: Hindavi Churi # your name (or website title) here
-logo: "/images/Profile.jpg?raw=true" # your photo (or logo) here
+logo: "/images/Profile.jpg?raw=true height="350" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  First description 
+Highly focused and motivated individual with valuable experience in the field of data with projects on Machine Learning and Big Data. 
+Proficient in Python scripting, interpreting, and generating high-scale results within tight deadlines. Possesses excellent communication 
+skills and a strong desire to make a positive impact in the world.
   <br><br>
   Second description 
   <br><br>
   <a href="https://www.linkedin.com/in/hindavi-dinesh-churi/">View My LinkedIn Profile</a> 
   
 theme: jekyll-theme-minimal
-google_analytics: UA-000000-0 # your Google Analytics tracking ID here
