--- a/_config.yml
+++ b/_config.yml
@@ -10,3 +10,7 @@ skills and a strong desire to make a positive impact in the world.
   <a href="https://www.linkedin.com/in/hindavi-dinesh-churi/">View My LinkedIn Profile</a> 
   
 theme: jekyll-theme-minimal
+google_analytics: UA-000000-0 # your Google Analytics tracking ID here
+
+colors:
+  crimson: '#900C3F'
