--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 title: Hindavi Churi # your name (or website title) here
 logo: "/images/Profile.jpg?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  <br>
-  Highly focused and motivated individual with valuable experience in the field of data with projects on Machine Learning and Big Data. Proficient in Python scripting, interpreting, and generating high-scale results within tight deadlines. Possesses excellent communication skills and a strong desire to make a positive impact in the world.
+  <be>
+  <h4>Highly focused and motivated individual with valuable experience in the field of data with projects on Machine Learning and Big Data. Proficient in Python scripting, interpreting, and generating high-scale results within tight deadlines. Possesses excellent communication skills and a strong desire to make a positive impact in the world.</h4>
   <br><br>
   <a href="https://www.linkedin.com/in/hindavi-dinesh-churi/">View My LinkedIn Profile</a> 
   
